style.css
html {
    scroll-behavior: auto;
}

html,
body {
    overflow-x: hidden;
    margin: 0;
    padding: 0;
}

body {
    height: 100%;
    height: 100vh;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    align-items: flex-start;
}

p {
    font-family: "Merriweather", serif;
    font-style: normal;
    font-size: 2em;
}

.section {
    /* display: flex;
    position: relative;
    width: 100%; */

    /* display: flex;
    position: relative; */
    width: 100%;
    /* height: 100vh; */
}

#image-container {
    /* position: relative;
    display: flex; */
    /* width: 100%; */
}

#mainImg {
    width: 100%;
    height: 100%;
    position: fixed;
    left: 0;
    top: 0;
    object-fit: cover;
    z-index: 0;
}

#table-content {
    visibility: hidden;
}

.welcome {
    border: 3px solid red;
    display: flex;
    text-align: center;
    align-items: center;
    /* flex-wrap: wrap; */
    /* justify-content: space-around; */
    position: fixed;
    flex-direction: column;
    /* top: 25%; */
    left: 50%;
    transform: translateX(-50%);
    z-index: 1;
    width: 100%;
    height: fit-content;
    top: 10%;
    min-height: 70vh;
    
}

#welcome {
    font-family: "adorn-condensed-sans", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 5em;
    color: #D2971A;
    /* border: 3px solid blue; */
    padding-top: 50px;
    
    

}

#welcome-text {
    font-family: "Merriweather", serif;
    font-style: normal;
    font-size: 2em;
    color: #D1B373;
    text-align: center;
    text-shadow: 2px 2px rgba(0, 0, 0, 0.3);
    width: 60vw;
    width: 70%;
    height: fit-content;
    /* border: 3px solid green; */
}

.icon-container-1 {
    /* display: flex; */
    position: fixed;
    /* justify-content: space-between; */
    width: 100vw;
    height: 100vh;
    border: 3px solid #000;
    left: 0;
    transition: left 0.5s ease-in-out;
    z-index: 3;

    
}

#icon-1 {
    border: 1px solid red;
    display: flex;
    position: relative;
    flex-direction: column; 
    text-align: center;
    width: 400px;
    width: 20vw;
    height: fit-content;
    /* left: 200px; */
    /* left: 10vw; */
    right: -10vw;
    z-index: 3;

}

/* #feketesereg {
    transition: width 0.5s ease-in-out;
} */

#icon-2 {
    border: 1px solid red;
    display: flex;
    position: relative;
    flex-direction: column; 
    text-align: center;
    width: 400px;
    width: 20vw;
    height: fit-content;
    /* left: 70vw; */
    right: -70vw;
    bottom: 5vh;
    transition: left 0.5s ease-in-out, width 0.5s ease-in-out;

}

/* #monastary {
    transition: width 0.5s ease-in-out;
} */

.label {
    font-family: "adorn-condensed-sans", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 3em;
    color: #000;
}

.hoverIcon {
    transition: transform 0.5s;
} 

.hoverIcon:hover {
    cursor: pointer;
    transform: scale(1.1);
}

.icon-foreground {
    z-index: 4;
}



.sidebar-left{
    display: flex;
    /* justify-content: center; */
    align-items: center;
    width: 100%;
    height: 100vh;
    position: fixed;
    top: 0;
    /* left will be set from -100% to 0 */
    left: -100%;
    transition: left 0.5s ease-in-out;
    border: 10px solid orange;

}

.sidebar-right{
    position: fixed;
    display: flex;
    /* justify-content: center; */
    align-items: center;
    width: 100%;
    height: 100vh;
    top: 0;
    /* left will be set from -100% to 0 */
    left: 100%;
    transition: left 0.5s ease-in-out;
    border: 10px solid green;

}

.sidebar-content {
    background-color: rgba(0, 0, 0, 0.7);
    width: 80vw;
    height: 100vh;
    padding: 20px;
    display: flex;
    flex-direction: row;
    align-items: center;
    position: relative;
    /* border: 3px solid blue; */
    
}

.sidebar-content img {
    width: fit-content;
    height: 50vh;
    border-radius: 40px;
    padding-right: 15px;
    /* box-shadow: #D1B373 10px 10px 0px 0px; */
}

.text {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    height: 50vh;
    width: fit-content;
    position:relative;
    /* border: 3px solid red; */
    float: inline-end;
    
    
}

.text p {
    /* padding: 50px; */
    padding-left: 50px;
    padding-right: 50px;
    color: #D1B373;
    font-family: "Merriweather", serif;
    font-style: normal;
    font-size: 2em;
    text-align: justify;
    align-content: center;
    height: 50vh;
    width: fit-content;
    min-height: 50vh;
    /* border: 3px solid blueviolet; */
    

}




/* Previous and Next Arrows */

a {
    text-decoration: none;
    display: inline-block;
    padding: 8px 16px;
    /* background-color: #D2971A; */
}

a:hover {
    background-color: #b58318;
    color: black;
}

.previous {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    /* background-color: #D1B373; */
    color: black;
    left: 0;
}

.next {
    z-index: 20;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    color: black;
    right: 0;
    

}

.round {
    border-radius: 50%;
}

/* Define styles for button states */
.arrow-default {
    background-color: #D2971A;
    z-index: 20;
}

.arrow-disabled {
    background-color: #D1B373;
    z-index: 20;
}

/* The dots/bullets/indicators */
.dots {
    display:flex;
    justify-content: center;
    align-items: center;
    /* margin-top: auto; Push the dots to the bottom */
    margin-top: -20px;
    
}
.dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 10px;
    background-color: #D1B373;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

.active,
.dot:hover {
    background-color: #b58318;
}

